c3p0-0.9.5
	-- Fixed small typo in log message, thanks Jaran Nilsen
	-- DriverManagerDataSource: Added synchronization missing for the very rare case of an on-the-fly 
	   reset of 'driverClass'; minor optimization, properly marked driver class loaded if an instantiation
	   of the driver has succeeded.
c3p0-0.9.5-pre10
	-- Removed support for try-with-resources (implementation of marker interface java.lang.AutoCloseable)
	   as it breaks Java6 support. I'll save it for 0.9.6 (unless I get a lot of complaints).
	   Thanks again to dwscott on github.
	-- Added config parameter com.mchange.v2.c3p0.management.ExcludeIdentityToken that allows users to
	   have c3p0 generate predictable, reproducible full JMX ObjectNames (at the cost of extra user
	   responsibility in ensuring the uniqueness of those names). Updated and expanded documentation
	   with respect to JMX support. Thanks to dwscott on github for suggesting this improvement.
c3p0-0.9.5-pre9
	-- In mchange-commons-java, modified log library to consider slf4j library unfound if it gets bound to its 
	   no-op ('NOP') back-end.
	-- Gave proxies a toString() method that embeds the toString() method of the objects they are wrapping, including
	   Statement text if the underlying driver supports that. Thanks to Ketan Padegaonkar for the suggestion.
	-- Added API [in mchange-commons-java] to make it easier for users to create a MultiPropertiesConfig object from a
	   Properties object, which will enable use of the new C3P0Config.refreshMainConfig( overrides, overridesDescription )
	   method, which may enable some useful dynamic configuarion possibilities, see e.g. https://sourceforge.net/p/c3p0/bugs/121/
	   Thanks to Vlad Skarzhevskyy on SourceForge for the proposed use case.
	-- Modified mchange-commons-java (and c3p0 docs) to prioritize slf4j over log4j if both are available in the application
	   classpath and com.mchange.v2.log.MLog has not been explicitly set. Thanks to Steve Ramage for the suggestion.